--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ scipy==1.0.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
+telepyth==0.1.6
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0.1
